--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,25 @@
-div.hihi {
-  font-weight: bold;
+div.modal-body {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(118, 118, 118, 0.55);
+}
+div.modal-body .modal-core {
+  display: flex;
+  width: 200px;
+  height: 200px;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+}
+div.modal-body .modal-core.delete-guestbook-confirm {
+  width: 500px;
+  height: 200px;
 }
 
 /*# sourceMappingURL=style.css.map */
